# patternify

./: LICENSE  README.md  pyproject.toml
src/patternify/: __init__.py  pattern.py  square.py  triangle.py
src/patternify.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
