[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patternify"
version = "0.0.1"
description = "Python package that generates Patterns."
readme = "README.md"
requires-python = ">=3.9"

authors = [{name = "Nikish Daniel", email = "nikishdaniel1@gmail.com"}]

license = {text = "MIT"}

keywords = ["python","utility"]

classifiers = ["Programming Language :: Python :: 3","License :: OSI Approved :: MIT License","Operating System :: OS Independent"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]